vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
      name: http
  selector:
    app: vault
